{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 27,
  "lineage": "99e5b3c9-c26f-7457-d1d5-5216d5dab368",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:504971453788:loadbalancer/app/technova-alb/987515cb70728e27",
            "arn_suffix": "app/technova-alb/987515cb70728e27",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "technova-alb-187692490.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:504971453788:loadbalancer/app/technova-alb/987515cb70728e27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "technova-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-065265f435d6d4568"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05028f557f0eed89f"
              },
              {
                "subnet_id": "subnet-0eee02606af6f1a75"
              }
            ],
            "subnets": [
              "subnet-05028f557f0eed89f",
              "subnet-0eee02606af6f1a75"
            ],
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-alb"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-alb"
            },
            "vpc_id": "vpc-09a7f552197d05edd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:504971453788:listener/app/technova-alb/987515cb70728e27/b285565d4fb2b8d1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:504971453788:targetgroup/technova-tg/537dedc4b2660628",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:504971453788:listener/app/technova-alb/987515cb70728e27/b285565d4fb2b8d1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:504971453788:loadbalancer/app/technova-alb/987515cb70728e27",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.this",
            "module.compute.aws_lb_target_group.this",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:504971453788:targetgroup/technova-tg/537dedc4b2660628",
            "arn_suffix": "targetgroup/technova-tg/537dedc4b2660628",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:504971453788:targetgroup/technova-tg/537dedc4b2660628",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:504971453788:loadbalancer/app/technova-alb/987515cb70728e27"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "technova-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-tg"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:security-group/sg-065265f435d6d4568",
            "description": "Allow HTTP from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065265f435d6d4568",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "technova-alb-sg",
            "name_prefix": "",
            "owner_id": "504971453788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-alb-sg"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:security-group/sg-00eb79b39dfd40404",
            "description": "Allow HTTP from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00eb79b39dfd40404",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065265f435d6d4568"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "technova-ec2-sg",
            "name_prefix": "",
            "owner_id": "504971453788",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-ec2-sg"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc2bc6279ace43d9",
            "arn": "arn:aws:ec2:us-west-2:504971453788:elastic-ip/eipalloc-0fc2bc6279ace43d9",
            "association_id": "eipassoc-0c26b1306e5e4d23d",
            "domain": "vpc",
            "id": "eipalloc-0fc2bc6279ace43d9",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06d03c747b4a585db",
            "private_dns": "ip-10-0-1-166.us-west-2.compute.internal",
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-44-231-219-240.us-west-2.compute.amazonaws.com",
            "public_ip": "44.231.219.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-nat-eip"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:internet-gateway/igw-009d4cc4a59626009",
            "id": "igw-009d4cc4a59626009",
            "owner_id": "504971453788",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-igw"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-igw"
            },
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc2bc6279ace43d9",
            "association_id": "eipassoc-0c26b1306e5e4d23d",
            "connectivity_type": "public",
            "id": "nat-03a192a02fc801cf0",
            "network_interface_id": "eni-06d03c747b4a585db",
            "private_ip": "10.0.1.166",
            "public_ip": "44.231.219.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eee02606af6f1a75",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-nat"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:route-table/rtb-0f50a2b8d04355632",
            "id": "rtb-0f50a2b8d04355632",
            "owner_id": "504971453788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a192a02fc801cf0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-private-rt"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:route-table/rtb-0f0bebe4283aa3242",
            "id": "rtb-0f0bebe4283aa3242",
            "owner_id": "504971453788",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009d4cc4a59626009",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-public-rt"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038148c33b4579790",
            "route_table_id": "rtb-0f50a2b8d04355632",
            "subnet_id": "subnet-078356ac0f4facd10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057d0ff897b3f7262",
            "route_table_id": "rtb-0f50a2b8d04355632",
            "subnet_id": "subnet-0272bcb8cebc30c0a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032828163c84ce516",
            "route_table_id": "rtb-0f0bebe4283aa3242",
            "subnet_id": "subnet-0eee02606af6f1a75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3f17a31ff6a40ba",
            "route_table_id": "rtb-0f0bebe4283aa3242",
            "subnet_id": "subnet-05028f557f0eed89f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:subnet/subnet-078356ac0f4facd10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078356ac0f4facd10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "504971453788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:subnet/subnet-0272bcb8cebc30c0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0272bcb8cebc30c0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "504971453788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-private-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:subnet/subnet-0eee02606af6f1a75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eee02606af6f1a75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504971453788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:subnet/subnet-05028f557f0eed89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05028f557f0eed89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "504971453788",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-public-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-09a7f552197d05edd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:504971453788:vpc/vpc-09a7f552197d05edd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f395fc7934728bab",
            "default_route_table_id": "rtb-066aa745ecfa61251",
            "default_security_group_id": "sg-0b167f9fc97218a7d",
            "dhcp_options_id": "dopt-06a6deb234086e917",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a7f552197d05edd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066aa745ecfa61251",
            "owner_id": "504971453788",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "technova-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}